[metadata]
name = brain_dump
version = 1.1.2
description = Tools to generate mindmaps compatible from markdown-like text files, either as PNG with graphviz or as wisemapping-compatible XMLs
# Using .rst as long as Markdown is not properly supported by pypi/warehouse :( -> https://github.com/pypa/warehouse/issues/869
long_description = file: README.rst
author = Lucas Cimon
author_email = lucas.cimon+pypi@@gmail.com
url = http://github.com/Lucas-C/brain_dump
license = GPL-3.0
keywords = mindmap wisemapping graph markdown graphviz parser
classifiers=
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Artistic Software
    Topic :: Multimedia :: Graphics :: Presentation
    Topic :: Text Processing :: Markup

[options]
packages = brain_dump
# Enable MANIFEST.in
include_package_data = true
# http://peak.telecommunity.com/DevCenter/setuptools#setting-the-zip-safe-flag
zip_safe = true
install_requires =
    pydot
    pyparsing

[bdist_wheel]
# This flag says that the code is written to work on both Python 2 and Python 3
universal=1